<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt1Nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNom" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt5Fec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintFec" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt2Tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTel" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt3Ema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEma" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt4Des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintDesc" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSig" />


</LinearLayout>